force-app/main/default/objects/ConditionOverviewHelper__c/ConditionOverviewHelper__c.object-meta.xml
<CustomObject>
    <label>Condition Overview Helper</label>
    <nameField>
        <displayFormat>KH-{000000000}</displayFormat>
        <label>Condition Overview Helper	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Overview Helpers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>