force-app/main/default/objects/ConditionOverviewHelper__c/fields/PriceExclDiscount__c.field-meta.xml
<CustomField>
    <fullName>PriceExclDiscount__c</fullName>
    <label>Price (excl. discount)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>