force-app/main/default/objects/ConditionOverviewHelper__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Condition Products</relationshipLabel>
    <relationshipName>ConditionOverviewHelpers</relationshipName>
    <type>Lookup</type>
</CustomField>