force-app/main/default/objects/ConditionOverviewHelper__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <formula>Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>