force-app/main/default/objects/ConditionOverviewHelper__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Condition Overview Helpers</relationshipLabel>
    <relationshipName>ConditionOverviewHelpers</relationshipName>
    <type>Lookup</type>
</CustomField>